tests/NormalTests/paczka1/small_fuzzy/78962942.err
Error in line 3: xq4 S946 4,1
Error in line 6: ol5 S17 74,15
Error in line 5: xq4 A401 63,7
Error in line 1: ol5 S366 45,7
Error in line 7: xq4 S946 50,1
Error in line 12: fQ8rnsk S17 70,6
